--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   postgres: 3.0.0
   http: ^1.1.0
   url_launcher: ^6.1.10
+  image_picker: ^1.0.4
+  file_picker: ^6.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
