--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   url_launcher: ^6.1.10
   image_picker: ^1.0.4
   file_picker: ^6.1.1
+  file: ^7.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
