--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  postgres: 3.0.0
+  postgres: ^3.0.1
   http: ^1.1.0
   url_launcher: ^6.1.10
   image_picker: ^1.0.4
